--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,7 +3,7 @@
   "robotLength": 0.812,
   "holonomicMode": true,
   "pathFolders": [
-    "Basics",
+    "Basic Autos",
     "Starts",
     "Station Paths",
     "Tests"
@@ -16,10 +16,10 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 25.0,
+  "robotMass": 26.0,
   "robotMOI": 6.883,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.044,
+  "driveWheelRadius": 0.051,
   "driveGearing": 6.746,
   "maxDriveSpeed": 4.5,
   "driveMotorType": "falcon500",
