made a bunch of autos

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,8 +4,8 @@
   "holonomicMode": true,
   "pathFolders": [
     "Basic Autos",
-    "Station Paths",
-    "Tests"
+    "foural left",
+    "foural right"
   ],
   "autoFolders": [
     "Tests"
